--- a/index.html
+++ b/index.html
@@ -340,21 +340,21 @@
         <div class="links-container">
             <a href="https://x.com" target="_blank" class="link-button">
                 <svg viewBox="0 0 24 24">
-                    <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                    <path d="https://x.com/bossofibiza"/>
                 </svg>
                 Twitter/X
             </a>
             
             <a href="https://t.me" target="_blank" class="link-button">
                 <svg viewBox="0 0 24 24">
-                    <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.894 8.221l-1.97 9.28c-.145.658-.537.818-1.084.508l-3-2.21-1.446 1.394c-.14.18-.357.295-.6.295-.002 0-.003 0-.005 0l.213-3.054 5.56-5.022c.24-.213-.054-.334-.373-.121l-6.869 4.326-2.96-.924c-.64-.203-.658-.64.135-.954l11.566-4.458c.538-.196 1.006.128.832.941z"/>
+                    <path d="https://t.me/BossofiBizatokencommunity"/>
                 </svg>
                 Telegram
             </a>
             
             <a href="https://dexscreener.com" target="_blank" class="link-button">
                 <svg viewBox="0 0 24 24">
-                    <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H3V5h18v14zM7 15h2v-4H7v4zm4 0h2v-7h-2v7zm4 0h2v-3h-2v3z"/>
+                    <path d="https://dexscreener.com/abstract/0x5af05975e8daecff6b74439843a8c3c2b7a29c3e"/>
                 </svg>
                 DexScreener
             </a>
