--- a/index.html
+++ b/index.html
@@ -338,21 +338,21 @@
         </header>
 
         <div class="links-container">
-            <a href="https://x.com" target="_blank" class="link-button">
+            <a href="https://x.com/bossofibiza" target="_blank" class="link-button">
                 <svg viewBox="0 0 24 24">
                     <path d="https://x.com/bossofibiza"/>
                 </svg>
                 Twitter/X
             </a>
             
-            <a href="https://t.me" target="_blank" class="link-button">
+            <a href="https://t.me/BossofiBizatokencommunity" target="_blank" class="link-button">
                 <svg viewBox="0 0 24 24">
                     <path d="https://t.me/BossofiBizatokencommunity"/>
                 </svg>
                 Telegram
             </a>
             
-            <a href="https://dexscreener.com" target="_blank" class="link-button">
+            <a href="https://dexscreener.com/abstract/0x5af05975e8daecff6b74439843a8c3c2b7a29c3e" target="_blank" class="link-button">
                 <svg viewBox="0 0 24 24">
                     <path d="https://dexscreener.com/abstract/0x5af05975e8daecff6b74439843a8c3c2b7a29c3e"/>
                 </svg>
