--- a/index.html
+++ b/index.html
@@ -404,8 +404,7 @@
     <div class="container">
         <header>
             <div class="logo-section">
-                <!-- Replace this src with your actual image URL after uploading to Vercel or a CDN -->
-                <img src="https://i.imgur.com/YOUR-IMAGE-ID.png" alt="Boss of Ibiza Penguin" class="logo-image">
+                <img src="./bob-logo.png" alt="Boss of Ibiza Penguin" class="logo-image">
             </div>
             <h1>Boss of Ibiza</h1>
             <div class="ticker">$BOB</div>
